--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -115,9 +115,11 @@
     <sys:String x:Key="Text.CreateTag.Message">标签描述 ：</sys:String>
     <sys:String x:Key="Text.CreateTag.Message.Placeholder">选填</sys:String>
 
+    <sys:String x:Key="Text.Dashboard.Open">打开</sys:String>
     <sys:String x:Key="Text.Dashboard.Explore">在文件浏览器中打开</sys:String>
     <sys:String x:Key="Text.Dashboard.VSCode">在Visual Studio Code中打开</sys:String>
-    <sys:String x:Key="Text.Dashboard.Terminal">打开GIT终端</sys:String>
+    <sys:String x:Key="Text.Dashboard.Terminal">在GIT终端中打开</sys:String>
+    <sys:String x:Key="Text.Dashboard.Refresh">重新加载</sys:String>
     <sys:String x:Key="Text.Dashboard.Search">查找提交</sys:String>
     <sys:String x:Key="Text.Dashboard.Configure">配置本仓库</sys:String>
     <sys:String x:Key="Text.Dashboard.Workspace">工作区</sys:String>
