--- a/src/Views/Widgets/RevisionFiles.xaml
+++ b/src/Views/Widgets/RevisionFiles.xaml
@@ -21,39 +21,77 @@
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
 
-        <Border Grid.Column="0" Background="{DynamicResource Brush.Contents}" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1">
-            <controls:Tree x:Name="treeFiles" SelectionChanged="OnFilesSelectionChanged" ContextMenuOpening="OnFilesContextMenuOpening">
-                <controls:Tree.ItemTemplate>
-                    <HierarchicalDataTemplate ItemsSource="{Binding Children}">
-                        <StackPanel Orientation="Horizontal" Height="24">
-                            <Path x:Name="Icon" Width="14" Height="14" Data="{StaticResource Icon.File}"/>
-                            <TextBlock Margin="6,0,0,0" Text="{Binding Path, Converter={StaticResource PureFileName}}"/>
-                        </StackPanel>
+        <Grid Grid.Column="0">
+            <Grid.RowDefinitions>
+                <RowDefinition Height="Auto"/>
+                <RowDefinition Height="*"/>
+            </Grid.RowDefinitions>
 
-                        <HierarchicalDataTemplate.Triggers>
-                            <DataTrigger Binding="{Binding IsFolder}" Value="True">
-                                <Setter TargetName="Icon" Property="Fill" Value="Goldenrod"/>
-                                <Setter TargetName="Icon" Property="Opacity" Value="1"/>
-                            </DataTrigger>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding IsFolder}" Value="True"/>
-                                    <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:TreeItem}}, Path=IsExpanded}" Value="False"/>
-                                </MultiDataTrigger.Conditions>
-                                <Setter TargetName="Icon" Property="Data" Value="{StaticResource Icon.Folder.Fill}"/>
-                            </MultiDataTrigger>
-                            <MultiDataTrigger>
-                                <MultiDataTrigger.Conditions>
-                                    <Condition Binding="{Binding IsFolder}" Value="True"/>
-                                    <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:TreeItem}}, Path=IsExpanded}" Value="True"/>
-                                </MultiDataTrigger.Conditions>
-                                <Setter TargetName="Icon" Property="Data" Value="{StaticResource Icon.Folder.Open}"/>
-                            </MultiDataTrigger>
-                        </HierarchicalDataTemplate.Triggers>
-                    </HierarchicalDataTemplate>
-                </controls:Tree.ItemTemplate>
-            </controls:Tree>
-        </Border>
+            <Grid Grid.Row="0">
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="24"/>
+                    <ColumnDefinition Width="*"/>
+                </Grid.ColumnDefinitions>
+
+                <Border
+                    Grid.Column="0" Grid.ColumnSpan="2"
+                    BorderBrush="{DynamicResource Brush.Border2}"
+                    BorderThickness="1"/>
+                <Path
+                    Grid.Column="0"
+                    Width="14" Height="14"
+                    Fill="{DynamicResource Brush.FG2}"
+                    Data="{StaticResource Icon.Search}"
+                    IsHitTestVisible="False"/>
+                <controls:TextEdit
+                    Grid.Column="1"
+                    Height="24"
+                    Margin="0"
+                    Placeholder="{DynamicResource Text.CommitViewer.Changes.Search}"
+                    BorderThickness="0"
+                    TextChanged="OnSearchFilterChanged"/>
+            </Grid>
+
+            <Border Grid.Row="1" Margin="0,4,0,0" Background="{DynamicResource Brush.Contents}" BorderBrush="{DynamicResource Brush.Border2}" BorderThickness="1">
+                <controls:Tree x:Name="treeFiles" SelectionChanged="OnFilesSelectionChanged">
+                    <controls:Tree.ItemContainerStyle>
+                        <Style TargetType="{x:Type controls:TreeItem}" BasedOn="{StaticResource Style.TreeItem}">
+                            <Setter Property="IsExpanded" Value="{Binding IsExpanded, Mode=TwoWay}"/>
+                            <EventSetter Event="ContextMenuOpening" Handler="OnFilesContextMenuOpening"/>
+                        </Style>
+                    </controls:Tree.ItemContainerStyle>
+                    <controls:Tree.ItemTemplate>
+                        <HierarchicalDataTemplate ItemsSource="{Binding Children}">
+                            <StackPanel Orientation="Horizontal" Height="24">
+                                <Path x:Name="Icon" Width="14" Height="14" Data="{StaticResource Icon.File}"/>
+                                <TextBlock Margin="6,0,0,0" Text="{Binding Path, Converter={StaticResource PureFileName}}"/>
+                            </StackPanel>
+
+                            <HierarchicalDataTemplate.Triggers>
+                                <DataTrigger Binding="{Binding IsFolder}" Value="True">
+                                    <Setter TargetName="Icon" Property="Fill" Value="Goldenrod"/>
+                                    <Setter TargetName="Icon" Property="Opacity" Value="1"/>
+                                </DataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding IsFolder}" Value="True"/>
+                                        <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:TreeItem}}, Path=IsExpanded}" Value="False"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter TargetName="Icon" Property="Data" Value="{StaticResource Icon.Folder.Fill}"/>
+                                </MultiDataTrigger>
+                                <MultiDataTrigger>
+                                    <MultiDataTrigger.Conditions>
+                                        <Condition Binding="{Binding IsFolder}" Value="True"/>
+                                        <Condition Binding="{Binding RelativeSource={RelativeSource AncestorType={x:Type controls:TreeItem}}, Path=IsExpanded}" Value="True"/>
+                                    </MultiDataTrigger.Conditions>
+                                    <Setter TargetName="Icon" Property="Data" Value="{StaticResource Icon.Folder.Open}"/>
+                                </MultiDataTrigger>
+                            </HierarchicalDataTemplate.Triggers>
+                        </HierarchicalDataTemplate>
+                    </controls:Tree.ItemTemplate>
+                </controls:Tree>
+            </Border>
+        </Grid>
 
         <GridSplitter Grid.Column="1" Width="1" HorizontalAlignment="Center" VerticalAlignment="Stretch" Background="Transparent"/>
 
