--- a/src/Views/Launcher.xaml
+++ b/src/Views/Launcher.xaml
@@ -14,6 +14,7 @@
     Title="{DynamicResource Text.About.Title}"
     Width="{Binding Source={x:Static models:Preference.Instance}, Path=Window.Width, Mode=TwoWay}"
     Height="{Binding Source={x:Static models:Preference.Instance}, Path=Window.Height, Mode=TwoWay}"
+    WindowState="{Binding Source={x:Static models:Preference.Instance}, Path=Window.State, Mode=TwoWay}"
     Closing="OnClosing">
     <Grid>
         <Grid.RowDefinitions>
