--- a/src/Resources/Styles/TabControl.xaml
+++ b/src/Resources/Styles/TabControl.xaml
@@ -80,4 +80,37 @@
             </Setter.Value>
         </Setter>
     </Style>
+
+    <Style x:Key="Style.TabControl.MiddleSwitch" TargetType="{x:Type TabControl}">
+        <Setter Property="OverridesDefaultStyle" Value="True" />
+        <Setter Property="SnapsToDevicePixels" Value="True" />
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="{x:Type TabControl}">
+                    <Grid KeyboardNavigation.TabNavigation="Local">
+                        <Grid.RowDefinitions>
+                            <RowDefinition Height="Auto" />
+                            <RowDefinition Height="*" />
+                        </Grid.RowDefinitions>
+                        <TabPanel 
+                            x:Name="HeaderPanel" 
+                            Grid.Row="0" 
+                            IsItemsHost="True" HorizontalAlignment="Center" KeyboardNavigation.TabIndex="1" Background="Transparent" />
+                        <Border 
+                            x:Name="Border" 
+                            Grid.Row="1" 
+                            Background="Transparent"    
+                            KeyboardNavigation.TabNavigation="Local"
+                            KeyboardNavigation.DirectionalNavigation="Contained"
+                            KeyboardNavigation.TabIndex="2">
+                            <ContentPresenter
+                                x:Name="PART_SelectedContentHost" 
+                                Margin="4"
+                                ContentSource="SelectedContent"/>
+                        </Border>
+                    </Grid>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+    </Style>
 </ResourceDictionary>
