--- a/src/Resources/Locales/zh_CN.xaml
+++ b/src/Resources/Locales/zh_CN.xaml
@@ -495,6 +495,14 @@
     <sys:String x:Key="Text.Statistics.CommitterName">提交者</sys:String>
     <sys:String x:Key="Text.Statistics.CommitAmount">提交次数</sys:String>
 
+    <sys:String x:Key="Text.Weekday.0">星期日</sys:String>
+    <sys:String x:Key="Text.Weekday.1">星期一</sys:String>
+    <sys:String x:Key="Text.Weekday.2">星期二</sys:String>
+    <sys:String x:Key="Text.Weekday.3">星期三</sys:String>
+    <sys:String x:Key="Text.Weekday.4">星期四</sys:String>
+    <sys:String x:Key="Text.Weekday.5">星期五</sys:String>
+    <sys:String x:Key="Text.Weekday.6">星期六</sys:String>
+
     <sys:String x:Key="Text.NotConfigured">GIT尚未配置。请打开【偏好设置】配置GIT路径。</sys:String>
     <sys:String x:Key="Text.PathNotFound">路径（{0}）不存在或不可读取!</sys:String>
     <sys:String x:Key="Text.MissingBash">无法找到bash.exe，请确保其在git.exe同目录中！</sys:String>
