--- a/src/Views/Statistics.xaml
+++ b/src/Views/Statistics.xaml
@@ -6,6 +6,7 @@
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:controls="clr-namespace:SourceGit.Views.Controls"
+    xmlns:widgets="clr-namespace:SourceGit.Views.Widgets"
     mc:Ignorable="d"
     Title="Statistics"
     Height="450" Width="600"
@@ -50,142 +51,13 @@
             Margin="8"
             Style="{DynamicResource Style.TabControl.MiddleSwitch}">
             <TabItem Header="{DynamicResource Text.Statistics.ThisWeek}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="32"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="8"/>
-                        <ColumnDefinition Width="2*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <DataGrid
-                        x:Name="lstCommitterWeek"
-                        Grid.Row="0" Grid.Column="0"
-                        Margin="0,8,0,0"
-                        Background="{DynamicResource Brush.Contents}"
-                        GridLinesVisibility="All"
-                        HorizontalGridLinesBrush="{DynamicResource Brush.Border0}"
-                        VerticalGridLinesBrush="{DynamicResource Brush.Border0}"
-                        VerticalScrollBarVisibility="Auto"
-                        HorizontalScrollBarVisibility="Disabled"
-                        HeadersVisibility="Column"
-                        RowHeight="24"
-                        ColumnHeaderHeight="24"
-                        CanUserAddRows="False"
-                        CanUserDeleteRows="False"
-                        CanUserResizeColumns="False"
-                        CanUserResizeRows="False"
-                        CanUserReorderColumns="False"
-                        BorderThickness="1"
-                        BorderBrush="{DynamicResource Brush.Border0}">
-                        <DataGrid.ColumnHeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
-                                            <Border BorderThickness="0,0,1,1" BorderBrush="{DynamicResource Brush.Border0}" Background="{DynamicResource Brush.Window}">
-                                                <TextBlock
-                                                    Text="{TemplateBinding Content}"
-                                                    HorizontalAlignment="Center"
-                                                    VerticalAlignment="Center"
-                                                    FontWeight="DemiBold"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </DataGrid.ColumnHeaderStyle>
-
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Width="*" Header="{DynamicResource Text.Statistics.CommitterName}" IsReadOnly="True" Binding="{Binding .Name}" ElementStyle="{StaticResource Style.TextBlock.LineContent}"/>
-                            <DataGridTextColumn Width="*" Header="{DynamicResource Text.Statistics.CommitAmount}" IsReadOnly="True" Binding="{Binding .Count}" ElementStyle="{StaticResource Style.TextBlock.LineContent}"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-
-                    <TextBlock Grid.Row="1" Grid.Column="0" x:Name="txtMemberCountWeek" Text="Total Committers: -"/>
-
-                    <controls:Chart
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        Margin="8,16,0,0"
-                        x:Name="chartWeek"
-                        LineBrush="{DynamicResource Brush.FG1}"
-                        ChartBrush="{DynamicResource Brush.Accent1}"/>
-
-                    <TextBlock Grid.Row="1" Grid.Column="2" x:Name="txtCommitCountWeek" HorizontalAlignment="Right" Text="Total Commits: -"/>
-                </Grid>
+                <widgets:StatisticsPage x:Name="pageWeek"/>
             </TabItem>
             <TabItem Header="{DynamicResource Text.Statistics.ThisMonth}">
-                <Grid>
-                    <Grid.RowDefinitions>
-                        <RowDefinition Height="*"/>
-                        <RowDefinition Height="32"/>
-                    </Grid.RowDefinitions>
-                    <Grid.ColumnDefinitions>
-                        <ColumnDefinition Width="*"/>
-                        <ColumnDefinition Width="8"/>
-                        <ColumnDefinition Width="2*"/>
-                    </Grid.ColumnDefinitions>
-
-                    <DataGrid
-                        x:Name="lstCommitterMonth"
-                        Grid.Row="0" Grid.Column="0"
-                        Margin="0,8,0,0"
-                        Background="{DynamicResource Brush.Contents}"
-                        GridLinesVisibility="All"
-                        HorizontalGridLinesBrush="{DynamicResource Brush.Border0}"
-                        VerticalGridLinesBrush="{DynamicResource Brush.Border0}"
-                        VerticalScrollBarVisibility="Auto"
-                        HorizontalScrollBarVisibility="Disabled"
-                        HeadersVisibility="Column"
-                        RowHeight="24"
-                        ColumnHeaderHeight="24"
-                        CanUserAddRows="False"
-                        CanUserDeleteRows="False"
-                        CanUserResizeColumns="False"
-                        CanUserResizeRows="False"
-                        CanUserReorderColumns="False"
-                        BorderThickness="1"
-                        BorderBrush="{DynamicResource Brush.Border0}">
-                        <DataGrid.ColumnHeaderStyle>
-                            <Style TargetType="{x:Type DataGridColumnHeader}">
-                                <Setter Property="Template">
-                                    <Setter.Value>
-                                        <ControlTemplate TargetType="{x:Type DataGridColumnHeader}">
-                                            <Border BorderThickness="0,0,1,1" BorderBrush="{DynamicResource Brush.Border0}" Background="{DynamicResource Brush.Window}">
-                                                <TextBlock
-                                                    Text="{TemplateBinding Content}"
-                                                    HorizontalAlignment="Center"
-                                                    VerticalAlignment="Center"
-                                                    FontWeight="DemiBold"/>
-                                            </Border>
-                                        </ControlTemplate>
-                                    </Setter.Value>
-                                </Setter>
-                            </Style>
-                        </DataGrid.ColumnHeaderStyle>
-
-                        <DataGrid.Columns>
-                            <DataGridTextColumn Width="*" Header="{DynamicResource Text.Statistics.CommitterName}" IsReadOnly="True" Binding="{Binding .Name}" ElementStyle="{StaticResource Style.TextBlock.LineContent}"/>
-                            <DataGridTextColumn Width="*" Header="{DynamicResource Text.Statistics.CommitAmount}" IsReadOnly="True" Binding="{Binding .Count}" ElementStyle="{StaticResource Style.TextBlock.LineContent}"/>
-                        </DataGrid.Columns>
-                    </DataGrid>
-
-                    <TextBlock Grid.Row="1" Grid.Column="0" x:Name="txtMemberCountMonth" Text="Total Committers: -"/>
-
-                    <controls:Chart
-                        Grid.Row="0"
-                        Grid.Column="2"
-                        Margin="8,16,0,0"
-                        x:Name="chartMonth"
-                        LineBrush="{DynamicResource Brush.FG1}"
-                        ChartBrush="{DynamicResource Brush.Accent1}"/>
-
-                    <TextBlock Grid.Row="1" Grid.Column="2" x:Name="txtCommitCountMonth" HorizontalAlignment="Right" Text="Total Commits: -"/>
-                </Grid>
+                <widgets:StatisticsPage x:Name="pageMonth"/>
+            </TabItem>
+            <TabItem Header="{DynamicResource Text.Statistics.ThisYear}">
+                <widgets:StatisticsPage x:Name="pageYear"/>
             </TabItem>
         </TabControl>
 
