rename<FileHistories>: rename Views.Histories to Views.FileHistories

--- a/src/Views/FileHistories.xaml
+++ b/src/Views/FileHistories.xaml
@@ -1,5 +1,5 @@
 <controls:Window 
-    x:Class="SourceGit.Views.Histories"
+    x:Class="SourceGit.Views.FileHistories"
     x:Name="me"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
